@@ -1,12 +1,3 @@
-Character
-
-	[Weight] = 1 g
-	[Size] = 0.01 m
-
-Item
-
-	[Weight] = 1 g
-	[Size] = 0.01 m
-
-
-	
+[Volume] = 1 ml = 1 cm^3
+[Weight] = 1 g
+[Size] = 1 cm
