@@ -1646,10 +1646,10 @@ void game::EnterArea(std::vector<character*>& Group, uchar Area, uchar EntryInde
       SetIsInWilderness(false);
       SetCurrent(Area);
       bool New = !GetCurrentDungeon()->PrepareLevel(Area);
-      GetCurrentLevel()->FiatLux();
       vector2d Pos = GetCurrentLevel()->GetEntryPos(Player, EntryIndex);
       GetCurrentLevel()->GetLSquare(Pos)->KickAnyoneStandingHereAway();
       GetCurrentLevel()->AddCharacter(Pos, Player);
+      GetCurrentLevel()->FiatLux();
 
       for(ushort c = 0; c < Group.size(); ++c)
 	{
