@@ -1,3 +1,11 @@
+November 23 2002 Timo Kiviluoto <sonor@phpoint.fi>
+
+	* Level entering messages and death messages now show the description of the currect
+	  dungeon, too
+	* Dropping items in a shop while invisible no longer automatically donates the item
+	  but asks whether it should be done
+	* Corrected a bug in the auto reveal feature of New Attnam
+
 November 23 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
 	* scroll of repairing added
@@ -7,7 +15,7 @@ November 22 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
 	* snakes, frogs and spiders sometimes appear from fountains
 	* confuse state
 	* reading activates random state when confused
-	
+
 November 23 2002 Timo Kiviluoto <sonor@phpoint.fi>
 
 	* Corrected a fatal script error that sometimes caused a crash when entering Oree's lair
